# qyri-lang

./: LICENSE  README.md
.github/: FUNDING.yml
QyriVM/: Cargo.toml
arclight/: Cargo.toml  test.qll
arclight/src/: arc_vm.rs  main.rs  qll.pest
cansm/: Cargo.toml
cansm/src/: cansm.pest  main.rs
docs/: index.md  index.rst
docs/Tutorial/: index.rst
docs/source/: conf.py  index.md  index.rst
docs/source/Tutorial/: Basics.rst  index.md  index.rst
lang/: Cargo.toml  concatenate.pegjs  expr.js  expr.pegjs  package-lock.json  package.json  tests.js  types.js
lang/src/: binding_def.rs  env.rs  expr.rs  lib.rs  main.rs  qyri.pest  stmt.rs  utils.rs  val.rs
lang/src/expr/: binding_usage.rs  block.rs
memory/: Cargo.toml
memory/src/: exceptions.rs  functions.rs  identifiers.rs  lib.rs  scopes.rs  typing.rs
qcompiler/: Cargo.toml  main.qi
qcompiler/src/: codegen.rs  main.rs  parsing.rs  qi.pest
qtest/: Cargo.toml
qtest/src/: main.rs
qyri_backend/: Cargo.toml
qyri_backend/src/: arithmetic.rs  bitwise.rs  exceptions.rs  functions.rs  lib.rs  strings.rs
qyri_frontend/: Cargo.toml
qyri_frontend/src/: grammar.pest  main.rs
qyri_vm/: Cargo.toml
qyri_vm/src/: lib.rs
stack/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
stack/src/: builder.rs  machine.rs
stack/src/acceptance/: arithmetic.rs
stack/src/code/: debug.rs  mod.rs
wax/: Cargo.toml  index.js  package-lock.json  package.json  wax.js
wax/testies/: anchor.yml  index.yml
wax/testies/src/: main.qi
