[package]
name = "cansm"
version = "0.1.0"
authors = ["Jeronimo <33876901+Xinovaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
stack-vm = "1.0.1"
pest = "2.0"
pest_derive = "2.0"

[dependencies.qyri_vm]
path = "../qyri_vm"