[package]
name = "qyri_backend"
version = "0.1.0"
authors = ["Jeronimo <33876901+Xinovaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.memory]
path = "../memory"

[dependencies.stack]
path = "../stack"

[dependencies.qyri_vm]
path = "../qyri_vm"